--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta
+			name="viewport"
+			content="minimum-scale=1, initial-scale=1, width=device-width"
+		/>
 		<meta
 			name="description"
 			content="Web site created using create-react-app"
 		/>
 		<meta name="msapplication-TileColor" content="#2d89ef" />
 		<meta name="theme-color" content="#ffffff" />
+
+		<!-- --------------------------------- css --------------------------------- -->
+		<link rel="stylesheet" href="./base.css" />
+
 		<!-- ------------------------------- favicon ------------------------------- -->
 		<link
 			rel="apple-touch-icon"
@@ -53,6 +59,7 @@
 			href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap"
 			rel="stylesheet"
 		/>
+
 		<title>Estudy</title>
 	</head>
 	<body>
