--- a/public/index.html
+++ b/public/index.html
@@ -60,6 +60,11 @@
 			rel="stylesheet"
 		/>
 
+		<link
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
+
 		<title>Estudy</title>
 	</head>
 	<body>
