--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,15 @@
 		<meta name="msapplication-TileColor" content="#2d89ef" />
 		<meta name="theme-color" content="#ffffff" />
 
+		<!-- ------------------------------- og tag -------------------------------- -->
+		<meta property="og:url" content="https://estudy-client.herokuapp.com/" />
+		<meta property="og:title" content="Estudy" />
+		<meta
+			property="og:description"
+			content="A place where you can get all the notes you want for your class"
+		/>
+		<meta property="og:image" content="/images/logo.png" />
+
 		<!-- --------------------------------- css --------------------------------- -->
 		<link rel="stylesheet" href="./base.css" />
 
