change image in og

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,10 @@
 			property="og:description"
 			content="A place where you can get all the notes you want for your class"
 		/>
-		<meta property="og:image" content="/images/logo.png" />
+		<meta
+			property="og:image"
+			content="https://estudy-client.herokuapp.com/images/logo.png"
+		/>
 
 		<!-- --------------------------------- css --------------------------------- -->
 		<link rel="stylesheet" href="./base.css" />
