--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,10 @@
 		<meta name="theme-color" content="#ffffff" />
 
 		<!-- ------------------------------- og tag -------------------------------- -->
+		<meta property="og:site_name" content="Estudy" />
 		<meta property="og:url" content="https://estudy-client.herokuapp.com/" />
 		<meta property="og:title" content="Estudy" />
+		<meta property="og:type" content="website" />
 		<meta
 			property="og:description"
 			content="A place where you can get all the notes you want for your class"
