fetch notes from api

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 		/>
 
 		<!-- --------------------------------- css --------------------------------- -->
-		<link rel="stylesheet" href="./base.css" />
+		<link rel="stylesheet" href="/base.css" />
 
 		<!-- ------------------------------- favicon ------------------------------- -->
 		<link
